--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "ownerBot": "62xxxxxxx@c.us",
+    "ownerBot": "62895415632442@c.us",
     "prefix": ".",
     "nao": "api-key",
     "openAiKey": "api-key",
